searcher overflow fix

--- a/static/base/frame.css
+++ b/static/base/frame.css
@@ -6,7 +6,7 @@ body {
 
 .body-grid-wrapper {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: 50px 1fr;
     grid-template-areas: "navbar"
         "content"
